feat(api): add members endpoint
